--- a/assets/css/pages/home-dessert.css
+++ b/assets/css/pages/home-dessert.css
@@ -28,19 +28,20 @@ Version: 1.0
 -------------------------------------------------------    */
 /* Common CSS */
 :root {
-  --primary-color: #E3C7F2;
+  --primary-color: #e3c7f2;
   --primary-black-color: #502965;
-  --heading-color: #0A0B0C;
-  --text-color: #3B3C3D;
-  --accent-color: #ED696E;
-  --rating-color: #FF9F1A;
+  --heading-color: #0a0b0c;
+  --text-color: #3b3c3d;
+  --accent-color: #ed696e;
+  --rating-color: #ff9f1a;
 }
 
 .sub-title {
   color: var(--heading-color);
   font-weight: 500;
 }
-.sub-title:before, .sub-title:after {
+.sub-title:before,
+.sub-title:after {
   display: none;
 }
 
@@ -66,12 +67,22 @@ Version: 1.0
 /* Hero Section CSS */
 .ds-hero-sec {
   padding: 325px 0 130px;
-  background-color: #F9F4FC;
-  overflow: hidden;
+  background-color: #f9f4fc;
+  overflow: visible;
 }
 @media (max-width: 1650px) {
   .ds-hero-sec {
     padding: 190px 0 130px;
+  }
+}
+@media screen and (max-width: 1199.98px) {
+  .ds-hero-sec {
+    padding: 150px 0 100px;
+  }
+}
+@media (max-width: 767.98px) {
+  .ds-hero-sec {
+    padding: 80px 0 60px;
   }
 }
 .ds-hero-sec .container-fluid {
@@ -86,6 +97,12 @@ Version: 1.0
 }
 @media screen and (max-width: 1199.98px) {
   .ds-hero-sec .container-fluid {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (max-width: 767.98px) {
+  .ds-hero-sec .container-fluid {
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -95,12 +112,22 @@ Version: 1.0
   top: 0;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 100%;
   z-index: -1;
 }
+@media (max-width: 767.98px) {
+  .ds-hero-sec .hero-shape {
+    display: none;
+  }
+}
 .ds-hero-sec .hero-content {
   margin-bottom: 60px;
+}
+@media (max-width: 767.98px) {
+  .ds-hero-sec .hero-content {
+    margin-bottom: 30px;
+  }
 }
 .ds-hero-sec .hero-content h1 {
   font-size: 360px;
@@ -116,14 +143,9 @@ Version: 1.0
     font-size: 200px;
   }
 }
-@media screen and (max-width: 991.98px) {
-  .ds-hero-sec .hero-content h1 {
-    font-size: 150px;
-  }
-}
 @media (max-width: 767.98px) {
   .ds-hero-sec .hero-content h1 {
-    font-size: 60px;
+    font-size: 50px;
   }
 }
 .ds-hero-sec .text-box {
@@ -134,7 +156,13 @@ Version: 1.0
     max-width: 450px;
   }
 }
-@media screen and (max-width: 991.98px) {
+@media screen and (max-width: 1199.98px) {
+  .ds-hero-sec .text-box {
+    max-width: 100%;
+    text-align: center;
+  }
+}
+@media (max-width: 767.98px) {
   .ds-hero-sec .text-box {
     max-width: 100%;
     text-align: center;
@@ -147,9 +175,118 @@ Version: 1.0
   color: var(--heading-color);
   margin-bottom: 50px;
 }
-@media (max-width: 767.98px) {
+@media screen and (max-width: 1199.98px) {
   .ds-hero-sec .text-box p {
     font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767.98px) {
+  .ds-hero-sec .text-box p {
+    font-size: 14px;
+    line-height: 22px;
+    margin-bottom: 20px;
+  }
+}
+/* Decorative items responsive */
+.hero-decorations {
+  position: relative;
+}
+@media (max-width: 767.98px) {
+  .hero-decorations {
+    display: none;
+  }
+}
+/* Hero image wrap responsive */
+.hero-image-wrap {
+  margin: 40px 0;
+}
+@media screen and (max-width: 1199.98px) {
+  .hero-image-wrap {
+    margin: 30px 0;
+  }
+}
+@media (max-width: 767.98px) {
+  .hero-image-wrap {
+    margin: 20px 0;
+  }
+}
+.hero-image-wrap img {
+  max-width: 100%;
+  height: auto;
+}
+/* CTA button responsive */
+.whatsapp-btn {
+  margin: 30px 0;
+}
+@media screen and (max-width: 1199.98px) {
+  .whatsapp-btn {
+    margin: 20px 0;
+  }
+}
+@media (max-width: 767.98px) {
+  .whatsapp-btn {
+    margin: 12px 0;
+  }
+}
+/* Logo responsive */
+.home-bannerLogo {
+  max-width: 200px;
+  height: auto;
+}
+@media screen and (max-width: 1199.98px) {
+  .home-bannerLogo {
+    max-width: 150px;
+  }
+}
+@media (max-width: 767.98px) {
+  .home-bannerLogo {
+    max-width: 80px;
+  }
+}
+
+/* Mobile Hero Section Optimization */
+@media (max-width: 767.98px) {
+  .ds-hero-sec .hero-content h2.text-anm {
+    word-break: break-word;
+  }
+
+  .ds-hero-sec .container-fluid .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .ds-hero-sec .col-lg-12 {
+    width: 100%;
+  }
+
+  .hero-content {
+    width: 100%;
+    text-align: center;
+  }
+
+  .text-box {
+    max-width: 100%;
+    padding: 0 10px;
+    margin: 0 auto;
+  }
+
+  .theme-btn.style-one {
+    font-size: 13px;
+    padding: 10px 20px;
+  }
+
+  .mt-5 {
+    margin-top: 1rem !important;
+  }
+}
+@media (max-width: 767.98px) {
+  .ds-hero-sec .text-box p {
+    font-size: 13px;
+    line-height: 20px;
+    margin-bottom: 15px;
   }
 }
 .ds-hero-sec .hero-image-wrap {
@@ -157,12 +294,23 @@ Version: 1.0
   bottom: 0;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 55%;
 }
 @media screen and (max-width: 1199.98px) {
   .ds-hero-sec .hero-image-wrap {
     display: none;
+  }
+}
+@media (max-width: 767.98px) {
+  .ds-hero-sec .hero-image-wrap {
+    position: relative;
+    bottom: auto;
+    left: auto;
+    transform: none;
+    width: 100%;
+    margin: 20px 0;
+    display: block;
   }
 }
 .ds-hero-sec .hero-image-wrap .hero-image {
@@ -176,9 +324,9 @@ Version: 1.0
 }
 .ds-hero-sec .hero-image-wrap .hero-image img {
   -o-object-position: bottom;
-     object-position: bottom;
+  object-position: bottom;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
   margin: 0 auto;
 }
 @media (max-width: 1650px) {
@@ -193,12 +341,12 @@ Version: 1.0
 }
 .ds-hero-sec .bistly-author-box {
   -webkit-margin-start: auto;
-          margin-inline-start: auto;
+  margin-inline-start: auto;
 }
-@media screen and (max-width: 991.98px) {
+@media (max-width: 767.98px) {
   .ds-hero-sec .bistly-author-box {
     -webkit-margin-start: inherit;
-            margin-inline-start: inherit;
+    margin-inline-start: inherit;
     margin: 40px auto 0;
   }
 }
@@ -226,8 +374,8 @@ Version: 1.0
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-size: 48px;
 }
 .bistly-author-box h2 span {
@@ -243,17 +391,17 @@ Version: 1.0
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 10px;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 @media screen and (max-width: 1199.98px) {
   .categories-wrapper {
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 .categories-wrapper .bistly-category-item {
@@ -270,16 +418,16 @@ Version: 1.0
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 10px;
   width: 100%;
   border-radius: 50px;
 }
 .bistly-category-item .icon {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -287,44 +435,44 @@ Version: 1.0
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   color: var(--heading-color);
   font-size: 24px;
   margin-right: 15px;
 }
 .bistly-category-item.bg_one {
-  background-color: #F9F4FC;
+  background-color: #f9f4fc;
 }
 .bistly-category-item.bg_one .icon {
-  background-color: #E3C7F2;
+  background-color: #e3c7f2;
 }
 .bistly-category-item.bg_two {
-  background-color: #FFEEEE;
+  background-color: #ffeeee;
 }
 .bistly-category-item.bg_two .icon {
-  background-color: #F3B9B9;
+  background-color: #f3b9b9;
 }
 .bistly-category-item.bg_three {
-  background-color: #F6F9E1;
+  background-color: #f6f9e1;
 }
 .bistly-category-item.bg_three .icon {
-  background-color: #C5E5A3;
+  background-color: #c5e5a3;
 }
 .bistly-category-item.bg_four {
-  background-color: #E7F4FC;
+  background-color: #e7f4fc;
 }
 .bistly-category-item.bg_four .icon {
-  background-color: #B9E2FB;
+  background-color: #b9e2fb;
 }
 .bistly-category-item.bg_five {
-  background-color: #FCEFD5;
+  background-color: #fcefd5;
 }
 .bistly-category-item.bg_five .icon {
-  background-color: #F6C872;
+  background-color: #f6c872;
 }
 
 /* About Section */
@@ -333,7 +481,7 @@ Version: 1.0
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .ds-about-sec .about-wrapper .about-left-wrap {
   width: calc(50% - 15px);
@@ -361,7 +509,7 @@ Version: 1.0
   z-index: 1;
   overflow: hidden;
   padding: 45px 50px;
-  background-color: #F9F4FC;
+  background-color: #f9f4fc;
   margin-bottom: 10px;
 }
 .ds-about-sec .bistly-about-box .shape {
@@ -404,7 +552,7 @@ Version: 1.0
 }
 .ds-about-sec .bistly-experience-box {
   padding: 40px 50px;
-  background-color: #E3C7F2;
+  background-color: #e3c7f2;
 }
 .ds-about-sec .bistly-experience-box .content {
   max-width: 580px;
@@ -492,16 +640,16 @@ Version: 1.0
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .bistly-choose-item .content h4.bg-one {
-  background-color: #F9F4FC;
+  background-color: #f9f4fc;
 }
 .bistly-choose-item .content h4.bg-two {
-  background-color: #F6F9E1;
+  background-color: #f6f9e1;
 }
 .bistly-choose-item .content h4.bg-three {
-  background-color: #E7F4FC;
+  background-color: #e7f4fc;
 }
 .bistly-choose-item .content h4.bg-four {
-  background-color: #FEE;
+  background-color: #fee;
 }
 @media screen and (max-width: 1199.98px) {
   .bistly-choose-item .content h4 {
@@ -514,7 +662,13 @@ Version: 1.0
 
 /* Menu Section CSS */
 .ds-menu-sec {
-  background: linear-gradient(96deg, #F5FEFF 0%, #FFF3EB 40.52%, #F7F5FB 69.21%, #F5EAF6 100%);
+  background: linear-gradient(
+    96deg,
+    #f5feff 0%,
+    #fff3eb 40.52%,
+    #f7f5fb 69.21%,
+    #f5eaf6 100%
+  );
 }
 
 .menu-slider {
@@ -551,11 +705,11 @@ Version: 1.0
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   font-size: 24px;
   cursor: pointer;
   -webkit-transition: all 0.3s;
@@ -569,7 +723,7 @@ Version: 1.0
   bottom: -50%;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
@@ -593,11 +747,11 @@ Version: 1.0
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin-bottom: 8px;
 }
 .bistly-product-item .content .ratings-price-wrap .ratings i {
@@ -621,7 +775,7 @@ Version: 1.0
   top: 60px;
   left: 120px;
   -webkit-transform: rotate(-30deg);
-          transform: rotate(-30deg);
+  transform: rotate(-30deg);
 }
 @media (max-width: 1650px) {
   .ds-offer-sec .bistly-image-box .shape {
@@ -643,11 +797,11 @@ Version: 1.0
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 @media (max-width: 767.98px) {
   .ds-offer-sec .bistly-image-box .discount-box {
@@ -670,7 +824,13 @@ Version: 1.0
 
 /* Testimonial Section */
 .ds-testimonial {
-  background: linear-gradient(96deg, #F5FEFF 0%, #FFF3EB 40.52%, #F7F5FB 69.21%, #F5EAF6 100%);
+  background: linear-gradient(
+    96deg,
+    #f5feff 0%,
+    #fff3eb 40.52%,
+    #f7f5fb 69.21%,
+    #f5eaf6 100%
+  );
   padding-bottom: 240px;
 }
 
@@ -678,7 +838,7 @@ Version: 1.0
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   font-size: 50px;
   color: var(--heading-color);
   cursor: pointer;
@@ -805,11 +965,11 @@ Version: 1.0
 }
 .bistly-blog-post .post-content .post-meta span:not(:last-child) {
   -webkit-margin-end: 25px;
-          margin-inline-end: 25px;
+  margin-inline-end: 25px;
 }
 .bistly-blog-post .post-content .post-meta span i {
   -webkit-margin-end: 10px;
-          margin-inline-end: 10px;
+  margin-inline-end: 10px;
 }
 .bistly-blog-post .post-content h4 {
   margin-bottom: 10px;
