--- a/assets/css/pages/home-dessert.css
+++ b/assets/css/pages/home-dessert.css
@@ -612,20 +612,226 @@ Version: 1.0
 }
 
 /* Why Choose Section */
+.ds-choose-sec {
+  position: relative;
+  overflow: hidden;
+}
+
 .ds-choose-sec .item-choose-list.choose-list-left {
   padding-right: 30px;
 }
-@media screen and (max-width: 1199.98px) {
-  .ds-choose-sec .item-choose-list.choose-list-left {
-    padding-right: 0;
-  }
-}
+
 .ds-choose-sec .item-choose-list.choose-list-right {
   padding-left: 30px;
 }
+
+/* RESPONSIVE - DESKTOP (1200px+) */
+@media screen and (min-width: 1200px) {
+  .ds-choose-sec .row.align-items-center {
+    gap: 20px;
+  }
+
+  .ds-choose-sec .col-lg-4 {
+    flex: 0 0 calc(33.333% - 14px);
+  }
+
+  .ds-choose-sec .item-choose-list.choose-list-left {
+    padding-right: 30px;
+    padding-left: 0;
+  }
+
+  .ds-choose-sec .item-choose-list.choose-list-right {
+    padding-right: 0;
+    padding-left: 30px;
+  }
+}
+
+/* RESPONSIVE - TABLET (768px - 1199px) */
 @media screen and (max-width: 1199.98px) {
+  .ds-choose-sec .item-choose-list.choose-list-left {
+    padding-right: 0;
+    padding-bottom: 30px;
+  }
+
   .ds-choose-sec .item-choose-list.choose-list-right {
     padding-left: 0;
+    padding-top: 30px;
+  }
+
+  .ds-choose-sec .row.align-items-center {
+    flex-direction: column;
+    row-gap: 40px;
+  }
+
+  .ds-choose-sec .col-lg-4 {
+    width: 100%;
+    max-width: 100%;
+    flex: 0 0 100%;
+  }
+
+  .ds-choose-sec .bistly-image {
+    width: 100%;
+    margin: 0 auto !important;
+  }
+
+  .icecream-melt-wrapper {
+    width: 100%;
+    max-width: 360px;
+    margin: 0 auto;
+  }
+}
+
+/* RESPONSIVE - MOBILE LANDSCAPE & SMALL TABLET (576px - 767px) */
+@media screen and (max-width: 767.98px) {
+  .ds-choose-sec {
+    padding: 50px 0;
+  }
+
+  .ds-choose-sec .row.justify-content-center.py-5 {
+    padding: 30px 0 !important;
+  }
+
+  .ds-choose-sec .section-title h3 {
+    font-size: 16px;
+  }
+
+  .ds-choose-sec .section-title h2 {
+    font-size: 24px;
+  }
+
+  .ds-choose-sec .row.align-items-center {
+    padding: 0 15px;
+    row-gap: 30px;
+  }
+
+  .ds-choose-sec .col-lg-4 {
+    width: 100%;
+  }
+
+  .bistly-choose-item {
+    margin-bottom: 20px;
+  }
+
+  .bistly-choose-item .content h4 {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
+
+  .bistly-choose-item .content p {
+    font-size: 14px;
+    padding: 15px 20px;
+  }
+
+  .icecream-melt-wrapper {
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  .melt-svg {
+    width: 100%;
+    height: auto;
+  }
+}
+
+/* RESPONSIVE - MOBILE PORTRAIT (up to 575px) */
+@media screen and (max-width: 575.98px) {
+  .ds-choose-sec {
+    padding: 40px 0;
+  }
+
+  .ds-choose-sec .container {
+    padding: 0 12px;
+  }
+
+  .ds-choose-sec .row.justify-content-center.py-5 {
+    padding: 20px 0 !important;
+  }
+
+  .ds-choose-sec .col-xl-7 {
+    max-width: 100% !important;
+    width: 100%;
+  }
+
+  .ds-choose-sec .section-title {
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  .ds-choose-sec .section-title h3 {
+    font-size: 13px;
+    margin-bottom: 5px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+  }
+
+  .ds-choose-sec .section-title h2 {
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .ds-choose-sec .row.align-items-center {
+    padding: 0 10px;
+    row-gap: 25px;
+    margin-bottom: 0;
+  }
+
+  .ds-choose-sec .col-lg-4 {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .ds-choose-sec .item-choose-list.choose-list-left,
+  .ds-choose-sec .item-choose-list.choose-list-right {
+    padding: 0;
+  }
+
+  .bistly-choose-item {
+    margin-bottom: 15px;
+    border-radius: 20px;
+  }
+
+  .bistly-choose-item .content h4 {
+    font-size: 14px;
+    padding: 8px 16px;
+    border-radius: 20px;
+    margin-bottom: 0;
+  }
+
+  .bistly-choose-item .content p {
+    font-size: 13px;
+    padding: 12px 16px;
+    line-height: 1.4;
+  }
+
+  .bistly-image {
+    display: none;
+  }
+
+  .icecream-melt-wrapper {
+    display: none;
+  }
+}
+
+/* RESPONSIVE - EXTRA SMALL MOBILE (up to 360px) */
+@media screen and (max-width: 360px) {
+  .ds-choose-sec .section-title h3 {
+    font-size: 12px;
+  }
+
+  .ds-choose-sec .section-title h2 {
+    font-size: 18px;
+  }
+
+  .bistly-choose-item .content h4 {
+    font-size: 13px;
+    padding: 7px 14px;
+  }
+
+  .bistly-choose-item .content p {
+    font-size: 12px;
+    padding: 10px 14px;
   }
 }
 
