--- a/assets/css/pages/all-home.css
+++ b/assets/css/pages/all-home.css
@@ -147,9 +147,9 @@ Version: 1.0
   color: var(--heading-color);
   margin-bottom: 50px;
 }
-@media (max-width: 767.98px) {
+@media (max-width: 1024px) {
   .ds-hero-sec .text-box p {
-    font-size: 18px;
+    font-size: 18px !important;
   }
 }
 .ds-hero-sec .hero-image-wrap {
